feat: Ajoute un module RSS complet pour la gestion et l'affichage des flux, incluant la mise en cache des images.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
           Zone
           <select name="zone" id="zone-select" required></select>
         </label>
+        <label>
+          Couleur
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <input type="color" name="color" id="block-color-input" value="#4b2bee"
+              style="width: 50px; height: 30px; border: none; padding: 0;" />
+            <span style="font-size: 0.8rem; opacity: 0.7;">(Optionnel)</span>
+          </div>
+        </label>
         <div class="modal-actions">
           <button type="button" id="cancel-btn">Annuler</button>
           <button type="submit" class="primary">Ajouter</button>
